--- a/css/styles.css
+++ b/css/styles.css
@@ -184,3 +184,9 @@ Mobile - for Restive.JS
 	font-family: "Nixie-One", serif; 
 	color: red;
 }
+
+.mobi section #home {
+	width: 100%;
+	padding: 0 10px;
+
+}
