--- a/css/styles.css
+++ b/css/styles.css
@@ -182,6 +182,7 @@ Mobile - for Restive.JS
 -------------------------------------------*/
 .mobi {
 	color: red;
+	font-family: "Pacifico", cursive; 
 }
 
 .mobi #about{
