--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,7 @@ Mobile - for Restive.JS
 -------------------------------------------*/
 .mobi {
 	color: red;
-	font-family: 'Satisfy'; 
+	/*font-family: 'Satisfy'; */
 }
 
 .mobi #about{
