--- a/css/styles.css
+++ b/css/styles.css
@@ -181,6 +181,10 @@ footer {
 Mobile - for Restive.JS
 -------------------------------------------*/
 
+.mobi header h1 {
+	font-size: 25px;
+}
+
 /*
 .mobi {
 	color: red;
