--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 /* apply a natural box layout model to all elements, but allowing components to change */
 html {
 	box-sizing: border-box;
-	font-size: 62.5%; 
+	font-size: 10px; 
 }
 *, *:before, *:after {
 	box-sizing: inherit;
@@ -17,11 +17,11 @@ body {
 	font-weight: 300;
 	background:  linear-gradient(rgba(0,139,139, 0.8), rgba(0, 0, 0, 0.8)), url(../images/4.jpg) no-repeat fixed;
 	color: #111111;
-	font-size: 1.5rem;
+	font-size: 150px;
 }
 
 h1, h2 {
-	font-size: 5rem;
+	font-size: 50px;
 	font-family: "Nixie One", serif;
 	text-transform: uppercase;
 }
@@ -81,7 +81,7 @@ header h1 {
 	padding: 10px 40px; /*Top right bottom left*/
 	margin-left:auto;
 	margin-right:auto;
-	font-size: 14rem;
+	font-size: 140px;
 	color: black;
 	font-weight: 400;
 }
@@ -165,7 +165,7 @@ footer {
 	margin: 10px;
 }
 .social-horizontal i {
-	font-size: 10rem;
+	font-size: 100px;
 }
 .social-horizontal i:hover {
 	color: #177F75;
@@ -174,7 +174,7 @@ footer {
 /* Copyright */
 .copyright {
 	margin-top: 75px;
-	font-size: 1.4rem;
+	font-size: 14px;
 }
 
 /*------------------------------------------
