--- a/css/styles.css
+++ b/css/styles.css
@@ -188,6 +188,12 @@ Mobile - for Restive.JS
 	font-family: 'Satisfy'; 
 }
 
+.mobi body {
+	width: 100%;
+	background:  linear-gradient(rgba(0,139,139, 0.8), rgba(0, 0, 0, 0.8)), url(../images/1.jpg) no-repeat fixed;
+
+}
+
 .mobi #about{
 	color: blue;
 	font-size: 110%;
