--- a/css/styles.css
+++ b/css/styles.css
@@ -190,7 +190,7 @@ Mobile - for Restive.JS
 
 .mobi body {
 	width: 100%;
-	background:  linear-gradient(rgba(0,139,139, 0.8), rgba(0, 0, 0, 0.8)), url(../images/1.jpg) no-repeat fixed;
+	background: url(../images/1.jpg) no-repeat fixed;
 
 }
 
