--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,7 @@ Mobile - for Restive.JS
 -------------------------------------------*/
 
 
-
+/*
 .mobi {
 	color: red;
 	font-family: 'Satisfy'; 
@@ -203,3 +203,4 @@ Mobile - for Restive.JS
 .mobi footer p {
 	color: red;
 }
+*/
