--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 /* apply a natural box layout model to all elements, but allowing components to change */
 html {
 	box-sizing: border-box;
-	font-size: 10px; 
+	font-size: 62.5%; 
 }
 *, *:before, *:after {
 	box-sizing: inherit;
@@ -17,11 +17,11 @@ body {
 	font-weight: 300;
 	background:  linear-gradient(rgba(0,139,139, 0.8), rgba(0, 0, 0, 0.8)), url(../images/4.jpg) no-repeat fixed;
 	color: #111111;
-	font-size: 150px;
+	font-size: 1.5rem;
 }
 
 h1, h2 {
-	font-size: 50px;
+	font-size: 5rem;
 	font-family: "Nixie One", serif;
 	text-transform: uppercase;
 }
@@ -81,7 +81,7 @@ header h1 {
 	padding: 10px 40px; /*Top right bottom left*/
 	margin-left:auto;
 	margin-right:auto;
-	font-size: 140px;
+	font-size: 14rem;
 	color: black;
 	font-weight: 400;
 }
@@ -165,7 +165,7 @@ footer {
 	margin: 10px;
 }
 .social-horizontal i {
-	font-size: 100px;
+	font-size: 10rem;
 }
 .social-horizontal i:hover {
 	color: #177F75;
@@ -174,33 +174,27 @@ footer {
 /* Copyright */
 .copyright {
 	margin-top: 75px;
-	font-size: 14px;
-}
-
-/*------------------------------------------
-Mobile - for Restive.JS
--------------------------------------------*/
-
-
-/*
-.mobi {
-	color: red;
-	font-family: 'Satisfy'; 
-}
-
-.mobi header h1 {
-	font-size: 25px;
-	color: red;
+	font-size: 1.4rem;
 }
 
 
-.mobi body {
-	width: 100%;
-	background: url(../images/1.jpg) no-repeat fixed;
+/* Medium screens */
+
+/* min-width 641px, medium screens */
+
+@media only screen and (max-width: 641px) {
+	html {
+		font-size: 12px;
+	}
+	header h1 {
+		font-size: 6rem;
+	}
+	.social-horizontal i {
+		font-size: 35px;
+	}
+	nav a {
+		padding:5px;
+	}
 
 }
 
-.mobi footer p {
-	color: red;
-}
-*/
