--- a/css/styles.css
+++ b/css/styles.css
@@ -177,37 +177,10 @@ footer {
 	font-size: 1.4rem;
 }
 
-/* ******************** 16 - Responsive Settings ******************** */
-/* Large */
+/*------------------------------------------
+Mobile - for Restive.JS
+-------------------------------------------*/
 
-/* Large */
-@media only screen and (min-width: 1200px) {
-
-	
-}
-
-/* Tablet */
-@media only screen and (min-width: 768px) and (max-width: 959px) {
-	
-}
-
-/* Medium */
-@media only screen and (min-width: 480px) and (max-width: 767px) {
-	
-}
-
-/* Small */
-@media only screen and (max-width: 479px) {
-	body {
-		min-width:302px;
-	}
-	
-}
-
-@media only screen and (max-width: 319px) {
-	header h1 {
-		color: blue;
-		font-size: 35px;
-	}
-	
+.mobi.phone header {
+	background: none;
 }
