--- a/css/styles.css
+++ b/css/styles.css
@@ -201,14 +201,13 @@ Mobile - for Restive.JS
 	}
 
 	header h1 {
-		color: blue;
-		font-size: 25px;
+		font-size: 3.5rem;
+
 	}
 }
 
 @media only screen and (max-width: 319px) {
 	header h1 {
-		color: blue;
 		font-size: 35px;
 	}
 	
