--- a/css/styles.css
+++ b/css/styles.css
@@ -45,8 +45,8 @@ a:hover {
 
 
 a.active {
-  background: #177F75;
-  color: #222;
+	background: #177F75;
+	color: #222;
 }
 
 /* SHARED STYLES 
@@ -186,12 +186,20 @@ Mobile - for Restive.JS
 
 /* Tablet */
 @media only screen and (min-width: 768px) and (max-width: 959px) {
-	
+	body {
+		min-width: 690px;
+	}	
+	header h1 {
+		font-size: 4.5rem;
+		color: red;
+	}
 }
 
 /* Medium */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
-	
+	body {
+		width: 400px;
+	}
 }
 
 /* Small */
@@ -204,6 +212,15 @@ Mobile - for Restive.JS
 		font-size: 3.5rem;
 
 	}
+
+	h1, h2 {
+		font-size: 2.5rem;
+	}
+
+	.social-horizontal i {
+		font-size: 3.5rem;
+	}
+
 }
 
 @media only screen and (max-width: 319px) {
