--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ body {
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 300;
 	background:  linear-gradient(rgba(0,139,139, 0.8), rgba(0, 0, 0, 0.8)), url(../images/4.jpg) no-repeat fixed;
+	background-size: cover;
 	color: #111111;
 	font-size: 1.5rem;
 }
